# bubblz

./: .gitignore
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-issue.md  sub-issue.md
.github/workflows/: ci.yaml
server/: Cargo.toml  schema.sql
server/src/: errors.rs  main.rs  registry.rs
server/src/db/: mod.rs
server/src/handlers/: message.rs  mod.rs  room.rs  user.rs  ws.rs
server/src/models/: message.rs  room.rs  user.rs
server/src/realtime/: connection_registry.rs  message_broker.rs  mod.rs  subscription_registry.rs
